# KGE

./: .bazelrc  .gitignore  .travis.yml  BUILD  CMakeLists.txt  GITTEST  KGE.cbp  KGE.depend  KGE.layout  LICENSE  LICENSE.txt  README.md  WORKSPACE  dependencies.bzl  doxyfile  doxygen.sh  doxymain.h  repositories.bzl  run.sh  setupAutocomplete.sh  workspace.code-workspace  workspace_status.py
apps/engine/: CMakeLists.txt
apps/engine/include/: easydelegate.hpp  easylua.hpp
apps/engine/include/ces/: BehaviorModel.hpp  CBehaviorModel.hpp  CComponentGravity.hpp  ComponentBase.hpp  ComponentGravity.hpp  ComponentModelRender.hpp  Entity.hpp  IComponent.hpp  ces.hpp
apps/engine/include/core/: COutgoingClient.hpp  ISerializable.hpp  Logging.hpp  SEngineInstance.hpp  SGameWorld.hpp  SSettingsRegistry.hpp  SSynchronousScheduler.hpp  common.hpp  config.hpp
apps/engine/include/engine/: BulletDebugDrawer.hpp  CBulletDebugDrawer.hpp  CFileReader.hpp  CSceneGraph.hpp  Common.hpp  Config.hpp  CoreSingleton.hpp  EntityGroupingSingleton.hpp  FileReadObject.hpp  INetworkPersistable.hpp  ISerializable.hpp  InputListenerSingleton.hpp  Logging.hpp  NetworkPersistableBase.hpp  SEngineInstance.hpp  SEventManager.hpp  SGameWorld.hpp  SInputListener.hpp  SResourceProvider.hpp  SScheduler.hpp  SerializableObjectBase.hpp  common.hpp  config.hpp
apps/engine/include/filesystem/: CFileReader.hpp  SResourceProvider.hpp
apps/engine/include/game/: CGameAIClient.hpp  CGameClient.hpp  CScriptedGame.hpp  GamemodeBase.hpp  IGameMode.hpp  IncomingClient.hpp  MoveManager.hpp  OutgoingClientSingleton.hpp  SEventManager.hpp  SGameServer.hpp  SGameWorld.hpp  ServerSingleton.hpp
apps/engine/include/input/: SInputListener.hpp
apps/engine/include/net/: CClient.hpp  IMessage.hpp  INetworkPersistable.hpp  IServer.hpp  SClient.hpp  SServer.hpp
apps/engine/include/network/: CClient.hpp  ClientBase.hpp  IMessage.hpp  IncomingClient.hpp  IncomingClientBase.hpp  MessageBase.hpp  OutgoingClientBase.hpp  OutgoingClientSingleton.hpp  PacketBase.hpp  SClient.hpp  SServer.hpp  ServerBase.hpp  ServerSingleton.hpp
apps/engine/include/support/: Array.hpp  BitStream.hpp  CBitStream.hpp  CCommandLineParser.hpp  CFileBitStream.hpp  CMapDivision.hpp  CommandLineParser.hpp  EndianUtilities.hpp  EventManager.hpp  EventManagerSingleton.hpp  FEndian.hpp  FTime.hpp  FileBitStream.hpp  MapDivision.hpp  SchedulerSingleton.hpp  String.hpp  Time.hpp  Utilities.hpp  support.hpp
apps/engine/include/tests/: Tests.hpp
apps/engine/include/video/: CBulletDebugDrawer.hpp  CSceneGraph.hpp  SRenderer.hpp
apps/engine/source/: EngineMain.cpp  UB_main.cpp  main.cpp
apps/engine/source/ces/: BehaviorModel.cpp  CBehaviorModel.cpp  CComponentGravity.cpp  ComponentGravity.cpp  ComponentModelRender.cpp  Entity.cpp
apps/engine/source/core/: COutgoingClient.cpp  Logging.cpp  SEngineInstance.cpp  SGameWorld.cpp  SSettingsRegistry.cpp  SSynchronousScheduler.cpp
apps/engine/source/engine/: BulletDebugDrawer.cpp  CBulletDebugDrawer.cpp  CFileReader.cpp  CSceneGraph.cpp  CoreSingleton.cpp  EntityGroupingSingleton.cpp  FileReadObject.cpp  InputListenerSingleton.cpp  Logging.cpp  SEngineInstance.cpp  SGameWorld.cpp  SInputListener.cpp  SResourceProvider.cpp
apps/engine/source/filesystem/: CFileReader.cpp  SResourceProvider.cpp
apps/engine/source/game/: CGameAIClient.cpp  CGameClient.cpp  MoveManager.cpp  OutgoingClientSingleton.cpp  SEventManager.cpp  SGameServer.cpp  SGameWorld.cpp  ServerSingleton.cpp
apps/engine/source/input/: SInputListener.cpp
apps/engine/source/lua/: clientlib.cpp  enginelib.cpp  gamelib.cpp  netlib.cpp  scenegraphlib.cpp  videolib.cpp
apps/engine/source/net/: CClient.cpp  IServer.cpp  SClient.cpp  SServer.cpp
apps/engine/source/network/: CClient.cpp  IncomingClient.cpp  IncomingClientBase.cpp  OutgoingClientBase.cpp  OutgoingClientSingleton.cpp  SClient.cpp  SServer.cpp  ServerBase.cpp  ServerSingleton.cpp
apps/engine/source/support/: BitStream.cpp  BitStream_Tests.cpp  CBitStream.cpp  CCommandLineParser.cpp  CFileBitStream.cpp  CMapDivision.cpp  CommandLineParser.cpp  EventManager.cpp  EventManagerSingleton.cpp  FTime.cpp  FileBitStream.cpp  FileBitStream_Tests.cpp  MapDivision.cpp  SEventManager.cpp  SScheduler.cpp  SchedulerSingleton.cpp  String.cpp  TBitStream.cpp  Time.cpp
apps/engine/source/tests/: BitStream.cpp  (+1 more)
apps/lua/: CMakeLists.txt
apps/lua/include/: lauxlib.h  lualib.h
apps/lua/source/: UB_main.c  lauxlib.c  linit.c  liolib.c  loadlib.c  loslib.c
apps/main/: BUILD  CMakeLists.txt  doxyfile
apps/main/source/: UB_main.cpp  main.cpp  resource.rc
apps/tests/: BUILD  CMakeLists.txt
apps/tests/source/: main.cpp
components/: CMakeLists.txt
components/engine/: BUILD  CMakeLists.txt  doxyfile
components/engine/tests/: BUILD  CGameWorld.cpp
components/lua/: CMakeLists.txt
components/lua/include/: lualib.h
components/lua/source/: UB_main.c  liolib.c  loslib.c
components/net/: BUILD  CMakeLists.txt  doxyfile
components/net/source/: CHTTPObject.cpp  CIncomingClient.cpp  IIncomingClient.cpp  IMessage.cpp  INetworkPersistable.cpp  IOutgoingClient.cpp  IServer.cpp  TNetworkPersistable.cpp
components/net/tests/: BUILD  CHTTPObject.cpp
components/phys/: BUILD  CMakeLists.txt  doxyfile
components/phys/source/: CSimulation.cpp  CWorld.cpp  IDebugRenderer.cpp  INode.cpp
components/platform/: CMakeLists.txt
components/platform/include/: file.hpp
components/script/: BUILD
components/sound/: BUILD  CMakeLists.txt  doxyfile
components/sound/source/: CSoundSource.cpp  CVoice.cpp  SSoundManager.cpp
components/sound/tests/: BUILD
components/support/: BUILD  CMakeLists.txt  README.md  doxyfile
components/support/source/: CBitStream.cpp  CCommandLineParser.cpp  CFileBitStream.cpp  CManagementConsole.cpp  CMapDivision.cpp  Console.cpp  FCPUInfo.cpp  FTime.cpp  Math.cpp  Regex.cpp  SProfiler.cpp  SSettingsRegistry.cpp  SSignalHandler.cpp  SSynchronousScheduler.cpp  TFileBitStream.cpp
components/support/tests/: BUILD  CBitStream.cpp  Console.cpp  FileBitStream.cpp  file.cpp
(+400 files in other folders)
