# Kiaro Game Engine CMake Build File
# This software is licensed under the Draconic Free License Version 1.
# Please refer to LICENSE.txt for more information.
# Copyright (c) 2014 Draconic Entertainment

CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
INCLUDE (ExternalProject)

PROJECT (KiaroGameEngine)

# Preprocessor Definitions
SET (KIARO_VERSION_MAJOR 0)
SET (KIARO_VERSION_MINOR 0)
SET (KIARO_VERSION_REVISION 0)

# Optional Settings
OPTION (DEBUG "Build a debug version of the game engine." OFF)
OPTION (BUILD64 "Build a 64bit version of the game engine." OFF)

# Configure for GNU Compiler
IF (CMAKE_COMPILER_IS_GNUCC AND ${BUILD64})
SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --std=c11 -m64 -Wall")
ELSEIF (CMAKE_COMPILER_IS_GNUCC AND ${BUILD64})
SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --std=c11 -m32 -Wall")
ENDIF (CMAKE_COMPILER_IS_GNUCC AND ${BUILD64})

IF (CMAKE_COMPILER_IS_GNUCXX AND ${BUILD64})
SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c11 -m64 -Wall")
ELSEIF (CMAKE_COMPILER_IS_GNUCXX AND ${BUILD64})
SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c11 -m32 -Wall")
ENDIF (CMAKE_COMPILER_IS_GNUCXX AND ${BUILD64})

IF (CMAKE_COMPILER_IS_GNUCC AND ${DEBUG})
SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
ENDIF (CMAKE_COMPILER_IS_GNUCC AND ${DEBUG})

IF (CMAKE_COMPILER_IS_GNUCXX AND ${DEBUG})
SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
ENDIF (CMAKE_COMPILER_IS_GNUCXX AND ${DEBUG})

# External Dependencies: ENet
SET (ENET_BUILD_COMMAND "")
SET (ENET_UPDATE_COMMAND "")
SET (ENET_CONFIGURE_COMMAND "")
SET (ENET_INSTALL_COMMAND "")

IF (NOT WIN32)
	SET (ENET_BUILD_COMMAND "make")
	SET (ENET_UPDATE_COMMAND "autoreconf -vfi")
	SET (ENET_CONFIGURE_COMMAND "./configure")
	SET (ENET_INSTALL_COMMAND "sudo make install")
ENDIF (NOT WIN32)

ExternalProject_Add(libenet
					GIT_REPOSITORY https://github.com/lsalzman/enet.git
					UPDATE_COMMAND ${ENET_UPDATE_COMMAND}
					BUILD_IN_SOURCE 1
					BUILD_COMMAND ${ENET_BUILD_COMMAND}
					CONFIGURE_COMMAND ${ENET_CONFIGURE_COMMAND}
					INSTALL_COMMAND ${ENET_INSTALL_COMMAND})

# Configure the Project itself
SET ($KIARO_SOURCES "source/")
SET ($KIARO_BUILDLOCATION "bin/")

TARGET_LINK_LIBRARIES (libenet)
INCLUDE_DIRECTORIES ("include/")
ADD_EXECUTABLE (${KIARO_BUILDLOCATION} ${KIARO_SOURCES})
ADD_DEPENDENCIES (${KIARO_BUILDLOCATION} libenet)
