MESSAGE(STATUS "Configuring components ...")

ADD_SUBDIRECTORY("support")
SET(SUPPORT_LINK_FILES ${SUPPORT_LINK_FILES} PARENT_SCOPE)
SET(SUPPORT_INCLUDE_DIRECTORY ${SUPPORT_INCLUDE_DIRECTORY} PARENT_SCOPE)

ADD_SUBDIRECTORY("lua")
SET(LUA_LINK_FILES ${LUA_LINK_FILES} PARENT_SCOPE)
SET(LUA_INCLUDE_DIRECTORY ${LUA_INCLUDE_DIRECTORY} PARENT_SCOPE)

ADD_SUBDIRECTORY("net")
SET(NET_LINK_FILES ${NET_LINK_FILES} PARENT_SCOPE)
SET(NET_INCLUDE_DIRECTORY ${NET_INCLUDE_DIRECTORY} PARENT_SCOPE)

ADD_SUBDIRECTORY("phys")
SET(PHYS_LINK_FILES ${PHYS_LINK_FILES} PARENT_SCOPE)
SET(PHYS_INCLUDE_DIRECTORY ${PHYS_INCLUDE_DIRECTORY} PARENT_SCOPE)

#ADD_SUBDIRECTORY("platform")
#SET(PLATFORM_LINK_FILES ${PLATFORM_LINK_FILES} PARENT_SCOPE)
#SET(PLATFORM_INCLUDE_DIRECTORY ${PLATFORM_INCLUDE_DIRECTORY} PARENT_SCOPE)
