MESSAGE(STATUS "Configuring components ...")

ADD_SUBDIRECTORY("support")
SET(SUPPORT_INCLUDE_DIRECTORY ${SUPPORT_INCLUDE_DIRECTORY} PARENT_SCOPE)

ADD_SUBDIRECTORY("net")
SET(NET_INCLUDE_DIRECTORY ${NET_INCLUDE_DIRECTORY} PARENT_SCOPE)
SET(NET_LINK_LIBRARIES ${NET_LINK_LIBRARIES} PARENT_SCOPE)

ADD_SUBDIRECTORY("phys")
SET(PHYS_INCLUDE_DIRECTORY ${PHYS_INCLUDE_DIRECTORY} PARENT_SCOPE)

ADD_SUBDIRECTORY("platform")
SET(PLATFORM_INCLUDE_DIRECTORY ${PLATFORM_INCLUDE_DIRECTORY} PARENT_SCOPE)

SET(COMPONENT_LINK_LIBRARIES ${PLATFORM_LINK_LIBRARIES} ${PHYS_LINK_LIBRARIES} ${NET_LINK_LIBRARIES} ${LUA_LINK_LIBRARIES} ${SUPPORT_LINK_LIBRARIES} PARENT_SCOPE)

#ADD_SUBDIRECTORY("platform")
#SET(PLATFORM_LINK_FILES ${PLATFORM_LINK_FILES} PARENT_SCOPE)
#SET(PLATFORM_INCLUDE_DIRECTORY ${PLATFORM_INCLUDE_DIRECTORY} PARENT_SCOPE)
