# Kiaro Game Engine CMake Build File
# This software is licensed under the Draconic Free License Version 1.
# Please refer to LICENSE.txt for more information.
# Copyright (c) 2014 Draconic Entertainment

MESSAGE(STATUS "Configuring Main Application ...")

CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (Main)

# Configure the Project itself
FILE(GLOB_RECURSE ENGINE_INCLUDES "include/*.hpp")
IF(NOT ENGINE_UB)
    file(GLOB_RECURSE ENGINE_SOURCES "source/*.cpp")
ELSE (NOT ENGINE_UB)
    SET(ENGINE_SOURCES "source/UB_main.cpp")
ENDIF (NOT ENGINE_UB)

# Tell CMake to treat paths relative to the cmake files
CMAKE_POLICY(SET CMP0015 NEW)

INCLUDE_DIRECTORIES ("include/" ${ENGINE_INCLUDE_DIRECTORY} ${PHYS_INCLUDE_DIRECTORY} ${Boost_INCLUDE_DIRS} ${EASYDELEGATE_INCLUDE_DIRECTORY} ${NET_INCLUDE_DIRECTORY} ${SUPPORT_INCLUDE_DIRECTORY} ${NET_INCLUDES} ${ALLEGRO_INCLUDE_DIRS} ${PHYSFS_INCLUDE_DIR} ${IRRLICHT_INCLUDE_DIRS} ${ENet_INCLUDE_DIRS} ${BULLET_INCLUDE_DIRS} ${GTEST_INCLUDE_DIRS} ${CEGUI_INCLUDE_DIR})
ADD_EXECUTABLE (Main ${ENGINE_SOURCES} ${ENGINE_INCLUDES})
ADD_DEPENDENCIES(Main Engine)
SET_TARGET_PROPERTIES(Main PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${KGE_APP_NAME} )
SET_TARGET_PROPERTIES(Main PROPERTIES RUNTIME_OUTPUT_NAME ${KGE_APP_NAME})

ADD_CUSTOM_COMMAND(TARGET Main POST_BUILD COMMAND ${PYTHON_EXECUTABLE} -E ${CMAKE_SOURCE_DIR}/templates/gentemplate.py
                    ${CMAKE_SOURCE_DIR}/templates/${KGE_TEMPLATE_NAME} ${KGE_APP_DIRECTORY}/Game
                    APPNAME=${KGE_APP_NAME} AUTHORNAME=${KGE_AUTHOR_NAME})

IF (UNIX)
	SET (LINUX_LINKS "SDL" "X11" "GL" "Xxf86vm")
ENDIF (UNIX)
TARGET_LINK_LIBRARIES(Main ${COMPONENT_LINK_LIBRARIES} ${CEGUI_IrrlichtRenderer_LIBRARIES} ${IRRLICHT_LIBRARIES} ${LINUX_LINKS} ${ALLEG_LIBRARY} ${allegro_LIBRARIES} ${allegro_main_LIBRARIES} ${CMAKE_DL_LIBS} ${Boost_LIBRARIES} ${PHYSFS_LIBRARY} ${ENet_LIBRARIES} ${GTEST_LIBRARIES} ${CEGUI_LIBRARIES} ${BULLET_LIBRARIES})
