# Kiaro Game Engine CMake Build File
# This software is licensed under the Draconic Free License Version 1.
# Please refer to LICENSE.txt for more information.
# Copyright (c) 2014 Draconic Entertainment

MESSAGE(STATUS "Configuring Unit Tests Application ...")


CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (Tests)

# Configure the Project itself
IF(NOT ENGINE_UB)
    file(GLOB_RECURSE TESTS_SOURCES "source/*.cpp")
ELSE (NOT ENGINE_UB)
    SET(TESTS_SOURCES "source/UB_main.cpp")
ENDIF (NOT ENGINE_UB)

SET(TESTS_LINKLIBRARIES "${PHYSFS_LIBRARY} ${allegro_LIBRARIES} ${allegro_main_LIBRARIES} ${ENet_LIBRARIES} ${IRRLICHT_LIBRARIES} ${GTEST_LIBRARIES} ${CEGUI_LIBRARIES} ${CEGUI_IrrlichtRenderer_LIBRARIES} lua.a")

IF (NOT WIN32)
    SET (TESTS_LINKLIBRARIES "${TESTS_LINKLIBRARIES} pthread")
ENDIF (NOT WIN32)

# Tell CMake to treat paths relative to the cmake files
CMAKE_POLICY(SET CMP0015 NEW)

INCLUDE_DIRECTORIES ("include/" ${LUA_INCLUDE_DIRECTORY} ${EASYLUA_INCLUDE_DIRECTORY} ${EASYDELEGATE_INCLUDE_DIRECTORY} ${NET_INCLUDE_DIRECTORY} ${SUPPORT_INCLUDE_DIRECTORY} ${NET_INCLUDES} ${allegro_INCLUDE_DIRS} ${PHYSFS_INCLUDE_DIR} ${IRRLICHT_INCLUDE_DIRS} ${ENet_INCLUDE_DIRS} ${BULLET_INCLUDE_DIRS} ${GTEST_INCLUDE_DIRS} ${CEGUI_INCLUDE_DIR})
ADD_EXECUTABLE (Tests ${TESTS_SOURCES})
ADD_DEPENDENCIES(Tests Engine Net Support)
TARGET_LINK_LIBRARIES(Tests ${COMPONENT_LINK_LIBRARIES} ${Boost_LIBRARIES} ${LUA_LINK_LIBRARIES} ${EASYLUA_LINK_LIBRARIES} ${CMAKE_DL_LIBS} ${PHYSFS_LIBRARY} ${ALLEG_LIBRARY} ${allegro_main_LIBRARIES} ${ENet_LIBRARIES} ${IRRLICHT_LIBRARIES} ${GTEST_LIBRARIES} ${CEGUI_LIBRARIES} ${BULLET_LIBRARIES} ${CEGUI_IrrlichtRenderer_LIBRARIES})
SET_TARGET_PROPERTIES(Tests PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${KGE_APP_NAME} )
