# Kiaro Game Engine CMake Build File
# This software is licensed under the Draconic Free License Version 1.
# Please refer to LICENSE.txt for more information.
# Copyright (c) 2016 Draconic Entity

CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
MESSAGE(STATUS "Configuring Phys Component ...")

PROJECT (Phys)

# Configure the Project itself
FILE(GLOB_RECURSE PHYS_INCLUDES "include/*.hpp")
FILE(GLOB_RECURSE PHYS_SOURCES "source/*.cpp")

INCLUDE_DIRECTORIES ("include/" ${IRRLICHT_INCLUDE_DIRS} ${BULLET_INCLUDE_DIRS} ${SUPPORT_INCLUDE_DIRECTORY} ${EASYDELEGATE_INCLUDE_DIRECTORY})
ADD_LIBRARY (Phys "STATIC" ${PHYS_SOURCES} ${PHYS_INCLUDES})
# TARGET_LINK_LIBRARIES(Phys ${ENGINE_LINKLIBRARIES})
ADD_DEPENDENCIES(Phys Support)

SET(PHYS_LINK_LIBRARIES $<TARGET_FILE:Phys>)

SET(PHYS_LINK_LIBRARIES ${PHYS_LINK_LIBRARIES} PARENT_SCOPE)
GET_FILENAME_COMPONENT(PHYS_INCLUDE_DIRECTORY "include/" ABSOLUTE)
SET(PHYS_INCLUDE_DIRECTORY ${PHYS_INCLUDE_DIRECTORY} PARENT_SCOPE)
