# Kiaro Game Engine CMake Build File
# This software is licensed under the Draconic Free License Version 1.
# Please refer to LICENSE.txt for more information.
# Copyright (c) 2016 Draconic Entity

CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

MESSAGE(STATUS "Configuring Sound Component ...")

PROJECT (Sound)

# Configure the Project itself
FILE(GLOB_RECURSE SOUND_INCLUDES "include/*.hpp")
FILE(GLOB_RECURSE SOUND_SOURCES "source/*.cpp")

# Load all the files for the the backend we want to use
MESSAGE(STATUS "Using ${AUDIO_BACKEND} audio backend.")
FILE(GLOB_RECURSE SOUND_BACKEND_SOURCES backends/${AUDIO_BACKEND}/*.cpp)
FILE(GLOB_RECURSE SOUND_BACKEND_INCLUDES backends/${AUDIO_BACKEND}/*.hpp)
GET_FILENAME_COMPONENT(SOUND_BACKEND_INCLUDE_DIRECTORY backends/${AUDIO_BACKEND}/include ABSOLUTE)
INCLUDE_DIRECTORIES ("include/" ${FMOD_INCLUDE_DIRS} ${IRRLICHT_INCLUDE_DIRS} ${EASYDELEGATE_INCLUDE_DIRECTORY} ${SUPPORT_INCLUDE_DIRECTORY} ${PHYSFS_INCLUDE_DIR} ${SOUND_BACKEND_INCLUDE_DIRECTORY})
ADD_LIBRARY (Sound "STATIC" ${SOUND_SOURCES} ${SOUND_INCLUDES} ${SOUND_BACKEND_SOURCES} ${SOUND_BACKEND_INCLUDES})

# Ensure that the parent can see our includes
SET(SOUND_LINK_LIBRARIES $<TARGET_FILE:Sound>)
GET_FILENAME_COMPONENT(SOUND_INCLUDE_DIRECTORIES "include/" ABSOLUTE)
SET(SOUND_INCLUDE_DIRECTORIES ${SOUND_INCLUDE_DIRECTORIES} ${SOUND_BACKEND_INCLUDE_DIRECTORY})

SET(SOUND_INCLUDES ${SOUND_INCLUDES} PARENT_SCOPE)
SET(SOUND_INCLUDE_DIRECTORIES ${SOUND_INCLUDE_DIRECTORIES} PARENT_SCOPE)
SET(SOUND_LINK_LIBRARIES ${SOUND_LINK_LIBRARIES} PARENT_SCOPE)
