# Kiaro Game Engine CMake Build File
# This software is licensed under the Draconic Free License Version 1.
# Please refer to LICENSE.txt for more information.
# Copyright (c) 2014 Draconic Entertainment

MESSAGE(STATUS "Configuring Support Component ...")

CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (Support)

# Configure the Project itself
file(GLOB_RECURSE SUPPORT_INCLUDES "include/*.hpp")
file(GLOB_RECURSE SUPPORT_SOURCES "source/*.cpp")

FILE(GLOB_RECURSE PLATFORM_SOURCES_COMMON "source/platform/common/*.cpp")
IF (UNIX)
	FILE(GLOB_RECURSE PLATFORM_SOURCES_PLATFORM "source/platform/unix/*.cpp")
ELSEIF(WIN32)
	FILE(GLOB_RECURSE PLATFORM_SOURCES_PLATFORM "source/platform/windows/*.cpp")
ENDIF(UNIX)

# FIXME: Include dirs?
INCLUDE_DIRECTORIES ("include/" ${EASYDELEGATE_INCLUDE_DIRECTORY} ${PHYSFS_INCLUDE_DIR} ${IRRLICHT_INCLUDE_DIRS} ${ALLEGRO_INCLUDE_DIRS})
ADD_LIBRARY (Support "STATIC" ${SUPPORT_SOURCES} ${SUPPORT_INCLUDES} ${PLATFORM_SOURCES_COMMON} ${PLATFORM_SOURCES_PLATFORM})

# Ensure that the parent can see our includes
SET(SUPPORT_LINK_LIBRARIES $<TARGET_FILE:Support>)
GET_FILENAME_COMPONENT(SUPPORT_INCLUDE_DIRECTORY "include/" ABSOLUTE)

SET(SUPPORT_INCLUDES ${SUPPORT_INCLUDES} PARENT_SCOPE)
SET(SUPPORT_INCLUDE_DIRECTORY ${SUPPORT_INCLUDE_DIRECTORY} PARENT_SCOPE)
SET(SUPPORT_LINK_LIBRARIES ${SUPPORT_LINK_LIBRARIES} PARENT_SCOPE)
